# Harness

./: .gitignore  pyproject.toml  runStuff.py
docs/Harness-wiki/: AI_Coding_Harness_Design_Context.md  README.md
docs/Harness-wiki/.obsidian/: workspace.json
docs/Harness-wiki/templates/: entity.md  source-summary.md  synthesis.md
docs/Harness-wiki/wiki/: index.md  log.md  overview.md
docs/Harness-wiki/wiki/concepts/: code-editing-reliability.md  modular-runtime.md  persistence-replay-observability.md  policy-and-approval-engine.md  quality-gates.md  skills-and-repository-instructions.md  subagents-and-a2a.md
docs/Harness-wiki/wiki/synthesis/: implementation-roadmap.md  open-design-questions.md  recommended-architecture.md  recommended-tech-stack.md
docs/wiki/: AGENTS.md  wiki-kit.json
docs/wiki/.obsidian/: workspace.json
docs/wiki/templates/: concept.md  lint-report.md  question-answer.md
docs/wiki/wiki/concepts/: agent-execution-loop.md  context-management.md  sandboxing.md  standards-at-boundaries.md  tool-system.md
docs/wiki/wiki/sources/: 2026-07-04-ai-coding-harness-design-context.md
src/harness/llm/: models.py
src/harness/llm/providers/: openai.py
