[project]
name = "harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ashraja941", email = "ashraja941@gmail.com" }
]
requires-python = ">=3.11.9"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
harness = "harness:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
